# acab

./: .asdf.plugins  .dir-locals.el  .envrc  .gitignore  .gitmodules  .lenvs  .mypy.ini  .pylintrc  .readthedocs.yaml  .related  .tool-versions  .venv  LICENSE  Makefile  README.md  TODOs.org  VERSION.toml  acab-ide  acab.yaml  agent_dsl  architecture.md  architecture_notes.org  checklist.md  fault_handling.rules  fileStructure.trie  institution.trie  module_design.org  network.py  notes.org  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  stringen.rules  towncrier.toml  tox.toml  walker.rules
.github/workflows/: python-publish.yml  python-test.yml
.tasks/: acab_todos.org  py_docs.toml  release.py
acab/: __init__.py  __main__.py  config.py  default.config  errors.py  index.rst  modal.config  modules.config  parse.config  util.config  util.py
acab/__templates/: config.config  config.toml  extension.py  extension_template.py  minimal.py  minimal_use.py  test_with_dsl.py  test_with_engine.py
acab/__tests/: __init__.py  dont_test_yet_parse_print_loop.py  dont_test_yet_trie.py  dont_test_yet_trie_wm.py  test_action_performance.py  test_basic_semantics.py  test_file_parsing.py  test_independent_semantics.py  test_parse_print_loop.py  test_secondary_semantics.py  test_semantic_system.py  test_transform_performance.py  test_trie.py  test_trie_engine.py  test_trie_engine_logic.py  test_trie_wm.py
acab/_docs/: faq.rst
acab/_interface/: context.py  debugger.py  fragments.py  handler_system.py  semantic.py  value.py
acab/abstract/: __init__.py  action.py  agenda.py  bootstrap_parser.py  contexts.py  dsl_fragment.py  engine.py  layer.py  module_interface.py  node.py  pipeline.py  production_operator.py  query.py  rule.py  sentence.py  transform.py  type_base.py  value.py  working_memory.py
acab/ast/: data.py  value.py
acab/cli/: acab_root.py  repl_main.py
acab/data/: __init__.py  node.py
acab/engine/: __init__.py
acab/engines/: bdi_engine.py  trie_engine.py
acab/error/: __init__.py  acab_base_exception.py  acab_config_exception.py  acab_exception.py  acab_handler_exception.py  acab_import_exception.py  acab_network_exception.py  acab_operator_exception.py  acab_parse_exception.py  acab_print_exception.py  acab_semantic_exception.py  base.py  config.py  config_exception.py  context.py  handler.py  handler_exception.py  import_exception.py  importer.py  network.py  network_exception.py  operator.py  operator_exception.py  parse.py  parse_exception.py  print_exception.py  printing.py  protocol.py  semantic.py  semantic_exception.py
acab/interfaces/: __init__.py  bind.py  cmd.py  config.py  context.py  data.py  debugger.py  dsl.py  engine.py  fragments.py  function_aliases.py  handler_system.py  module_loader.py  printing.py  semantic.py  sieve.py  type_aliases.py  type_strings.py  types.py  unified_extension.py  util.py  value.py
acab/parsing/: __init__.py  consts.py  dsl_builder.py  util.py
acab/printing/: wrappers.py
acab/repl/: ReplParser.py  __init__.py  repl.py  repl_commands.py
acab/semantics/: basic.py
acab/util/: annotation.py
acab/value/: util.py
acab/working_memory/: __init__.py
docs/: Artifact_examples.org  README.md  architecture_notes.org  cli.rst  conf.py  crosscut_ideas.org  el_metalang_possibility  getting_started.rst  haskell_types.reference  index.rst  linlog.rules  main.org  normsExplanation  pragmas  structure.org  test_plan.org  typing.rules  typing_ideas  walker.rules
docs/_static/: custom.css
docs/architecture/: overview.rst
docs/examples/: overview.rst
docs/raw/: abl.rules  commits  conventions.org  cultist.rules  cycles.notes  design_notes  example_semantics.trie  extension_howto.org  ide_design.org  idea.rules  inst_info_pane.org  institution_pipeline.org  latest_institution_attempt.org  main.org  mental_models.org  misc.org  mypy_error_codes  other.org  ring-buffer  semantic_hint_op.rules  structure.org  value_strings.org
emacs/: acab-autoload.el  acab-comint.el  acab-company.el  acab-faces.el  acab-ide-management.el  acab-ide.el  acab-keys-default.el  acab-subprocess.el  acab-window-manager.el  example.rule  ob-acab.el  trie-company.el
emacs/data-struct/: trie-data.el
emacs/modes/: acab-activity-mode.el  acab-game-mode.el  acab-ide-minor-mode.el  acab-inst-mode.el  acab-layer-navigator-mode.el  acab-log-mode.el  acab-rule-mode.el  acab-sequence-mode.el  acab-string-expansion-mode.el  acab-test-mode.el  (+3 more)
other_files/: agent_dsl  architecture_notes.org  fileStructure.trie  modules  notes.org  refactor_notes.org
pyRule/: Actions.py  Clause.py  Comparisons.py  Contexts.py  EngineBase.py  FactBase.py  FactNode.py  FactParse.py  FactTrie.py  Query.py  QueryParser.py  Rule.py  RuleParser.py  Transforms.py  TrieContexts.py  TrieQuery.py  __init__.py  bdi_engine.py  flycheck_FactBase.py  utils.py
py_rule/: __init__.py  bdi_engine.py  network.py  repl.py  util.py  utils.py
testfiles/: action_macro.trie  another.rule  default_action_setting.rule  exampleComments.trie  exampleRule1.trie  exampleRules2.trie  exclusion_update_test.trie  multi_rule_proposals.trie  multi_transform_test.trie  multiclause_rule.trie  operation_rebind.rule  print_test.trie  retractionTest.trie  rule_as_trie.trie  rule_with_comments.trie  selection_of_rules_test.trie  simple_layer.trie  simple_typing.trie  simple_typing_2.trie  string_assert_test.trie  string_query_test.trie  string_retract_test.trie  test.rule  test2.rule  test_context.rule  test_query.rule  transform_selection_single.trie  transform_test.trie  two_action_macro.trie  valued_action_macro.trie  variable_macro_in_action_macro_test.trie
tests/: Engine_Tests.py  Makefile  RuleFactTrieTests.py  RuleTests.py  bdi_tests.py  datastructure_tests.py  engine_logic_tests.py  exampleQueries  test_context.py  trie_action_parser_tests.py  trie_fact_parser_tests.py  trie_fb_tests.py  trie_query_parser_tests.py  trie_rule_parser_tests.py  trie_transform_parser_tests.py  trie_typedef_tests.py  wme_tests.py
toml/: binding.toml  modal.toml  time.toml  trie.toml  typing.toml
(+1540 files in other folders)
