[project]
name            = "acab"
version         = "0.1.1"
description     = "Production System DSL"
readme          = "README.md"
requires-python = ">=3.12"
license-files   = ["LICENSE"]
keywords        = ["AI", "Production System", "rules", "DSL"]
authors         = [
    {email = "jgrey4296@gmail.com", name = "J Grey"}
]
classifiers     = [
    "Programming Language :: Python :: 3.12"
]

dependencies   = [
    "jgdv>=1.0.1",
    "pyparsing>=3.2.3",
]


[project.urls]
homepage      = "https://github.com/jgrey4296/acab"
documentation = "https://readthedocs.org/acab"
repository    = "https://github.com/jgrey4296/acab"
changelog     = "https://github.com/jgrey4296/acab/blob/master/CHANGELOG.md"

##-- scripts
[project.scripts]
acabr = "acab.cli.repl_main:main_repl"
acab  = "acab.cli.acab_root:main"
# todo: add template generation scripts

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

##-- end scripts

##-- build-system
[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ['acab']
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["acab"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.exclude-package-data]

##-- end build-system

# Tools #######################################################################

##-- pytest
# https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts          = [
  # "--cov=",
  # "--ignore-glob=related_/*"
]
cache_dir       = ".temp/pytest_cache"
log_file        = ".temp/logs/pytest.log"

log_cli         = false
log_level       = "DEBUG"
log_cli_level   = "INFO"
log_format      = "%(levelname)s %(name)s : %(message)s"
log_file_level  = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s : %(message)s"
##-- end pytest

##-- isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
color_output           = false
py_version             = 311
# profile                = "hug"
comment_prefix         = "# "
sections               = [
"FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"
]
default_section        = "THIRDPARTY"
lines_after_imports    = -1
lines_between_sections = 1
lines_between_types    = 0

import_heading_future      = "Imports:"
import_heading_stdlib      = "##-- stdlib imports"
import_heading_thirdparty  = "##-- 3rd party imports"
import_heading_firstparty  = "##-- 1st party imports"
import_heading_localfolder = ""

import_footer_future      = ""
import_footer_stdlib      = "##-- end stdlib imports"
import_footer_thirdparty  = "##-- end 3rd party imports"
import_footer_firstparty  = "##-- end 1st party imports"
import_footer_localfolder = ""

add_imports            = []

##-- end isort

##-- mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version      = "3.12"
warn_return_any     = true
warn_unused_configs = true
exclude             = [] # regexs to ignore
cache_dir           = ".temp/mypy_cache"
##-- end mypy

##-- uv
# https://docs.astral.sh/uv/concepts/configuration-files/
[tool.uv.sources]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "towncrier>=24.8.0",
]
test =[
    "pydot>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "tox>=4.28.4",
    "tox-uv>=1.27.0",
    "ruff>=0.12.8",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "pydot>=4.0.1",
    "tox>=4.28.4",
    "tox-uv>=1.27.0",
]

##-- end uv

