[metadata]
name             = acab
version          = 0.0.1
author           = John Grey
author_email     = jgrey.n.plus.one at gmail.com
description      = The ACAB Production System
long_description = file:README.md
keywords         = ACAB, rule, production_system, ai, simulation
license          = ACAB
url              = https://github.com/jgrey4296/acab
classifiers =
            Programming Language :: Python :: 3.5

[options]
packages = acab
# zip_safe = False
# include_package_data = False
#

# [options.package_data]

[options.entry_points]
console_scripts =
                acabr = acab.modules.repl.repl_main:main
